# data-driven-pleasure-insights

./: README.md  main.py  pyproject.toml
src/02_pre_processamento/: limpeza_normalizacao.py
src/03_analise_descritiva/: frequencias.py  main.py
